HF-01: fixed migrations

--- a/src/main/resources/db/changelog/V1.0.0/08.create-api-data-created-at-idx.yaml
+++ b/src/main/resources/db/changelog/V1.0.0/08.create-api-data-created-at-idx.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 01.create-table-api-data
+      id: 08.create-api-data-created-at-idx
       author: venkovmv
       changes:
         - createIndex:
