--- a/src/main/resources/db/changelog/V1.0.0/01.create-table-api-data.yaml
+++ b/src/main/resources/db/changelog/V1.0.0/01.create-table-api-data.yaml
@@ -22,5 +22,5 @@ databaseChangeLog:
                   remarks: "Response status"
               - column:
                   name: payload
-                  type: jsonb
+                  type: varchar
                   remarks: "Response data or error message"
